--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,7 @@
 version: 2.1
-
-# Define the jobs we want to run for this project
-jobs:
-  pull-and-build:
-    docker:
-      - image: arvindr226/alpine-ssh
-    steps:
-      - checkout
-      - run: ssh -oStrictHostKeyChecking=no -v $USER@$IP "./deploy.sh"
-
-# Orchestrate our job run sequence
+orbs:
+  node: circleci/node@3.0.0
 workflows:
-  version: 2
-  build-project:
+  node-tests:
     jobs:
-      - pull-and-build:
-          filters:
-            branches:
-              only:
-                - master
+      - node/test
